[gd_scene load_steps=3 format=2]

[ext_resource path="res://project/Combo/ComboHboxContainer.gd" type="Script" id=1]
[ext_resource path="res://project/Combo/KeyComboController.gd" type="Script" id=2]

[node name="KeyComboController" type="Node2D"]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_left = -21.0
margin_top = -20.0
margin_right = 19.0
margin_bottom = 20.0
alignment = 1

[node name="ComboHBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 20.0
margin_right = 40.0
margin_bottom = 20.0
alignment = 1
script = ExtResource( 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
